@@ -150,12 +150,13 @@ With this being said, here are your options:
   <td><span class="small">After having entered all required data, click this button to submit the form</span></td>
  </tr>
 </table>
+<hr />
 <a name="install_screen_classic_end"></a>
 
 <a name="install_screen_wizard"></a><h2>The install wizard<a href="#install_screen_wizard" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
 Starting with cpg1.5.x coppermine comes with a wizard-like installer that will lead you through the entire install process. Below are the steps of the install wizard, with one chapter per wizard step.
 
-<div class="cpg_message_info">Do <strong>not</strong> use your browser's previous/next buttons if you want to go one page back or forward inside the installer. Instead: do only use the controls built-into the installer. You'll get unpredictable results if you don't heed this advice.</div>
+<div class="cpg_message_info">Do <strong>not</strong> use your browser's previous/next buttons if you want to go one page back or forward inside the installer. Instead: do only use the controls built-into the installer. You'll get unpredictable results if you don't heed this advice. To go back to previous steps of the installer, use the links at the top right of the installer where all steps that have been visited so far are highlighted and clickable.</div>
 
 <a name="install_screen_wizard_license"></a><h3>License agreement &amp; language selection<a href="#install_screen_wizard_license" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 On the initial screen of the wizard you will see the <a href="copyrights.htm">license</a> disclaimer that coppermine comes with. If you don't accept the license, you're not allowed to continue the install wizard. You can re-read the license at any later time (after having completed the installer) by going to this documentation and navigating to "Coppermine documentation" &rarr; "License &amp; Copyright".<br />
@@ -187,7 +188,29 @@ You need to specify
 Underneath the input fields you will find a button to test the connection - if you click that button, a test is performed to see if the data you have entered is correct. If it is, you can continue to the next step. If it is not, you will need to review your mySQL authentification settings.
 
 <a name="install_screen_wizard_mysql_select"></a><h3>MySQL database selection<a href="#install_screen_wizard_mysql_select" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
-tbc...
+Here you have to choose which database you want to use for Coppermine.<br />
+If your Mysql account has the needed privileges, you can create a new database from within the installer or you can use an existing database. If you don't like both options, you will have to create a database first outside the Coppermine installer, then return here, then select the new database from the dropdown box below.<br />
+You can also change the table prefix (don't use dots though), but keeping the default prefix is recommended.<br />To install more than one instance of coppermine into one database, use different table prefixes.<br />
+After having selected your preferences, click the "populate database" button.
+
+<a name="install_screen_wizard_mysql_structure"></a><h3>Creating database structure<a href="#install_screen_wizard_mysql_structure" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+The database structure screen is for information only - there is nothing you can do to interact here. The screen shows the progress of the database operations performed to create the database tables for your gallery. If everything works as expected, you should see a couple of rows with a message like <tt class="code">Creating table 'XXX' Status:... OK</tt>. If you don't get the status "OK" in each line, something went wrong and needs looking into. This is usually the case if the mysql user account you specified in the step &quot;<a href="#install_screen_wizard_mysql_auth">MySQL user authentication</a>&quot; doesn't have the needed privileges to create the tables. Another reason for failure can be lack of space in the database. In both cases you should contact your webhost for support.<br />
+If everything went OK you can proceed to the next step of the installer by clicking on the button at the bottom of the screen.
+ 
+<a name="install_screen_wizard_admin_user"></a><h3>Create coppermine administrator<a href="#install_screen_wizard_admin_user" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+In this step you need to create a user account with admin privileges for you. It's very important to enter the data carefully. Some facts to remember:
+<ul>
+    <li>Use only alphanumeric characters. No spaces, no special characters!</li>
+    <li>Use an email address that actually exists - in case you forget your password, you can request a new password to be sent to that address.</li>
+    <li>Memorize your user name and password - you better keep it in a safe place (the coppermine dev team recommend using a third party application like <a href="http://keepass.info/" rel="external" class="external">KeePass</a> to manage your passwords and store them savely).</li>
+    <li>It's recommended not to use generic account names like &quot;admin&quot; or &quot;administrator&quot;, as they can easily be guessed and thus make automated brute-force attacks more likely. The name of the admin account will shine through the coppermine user interface in various places for all actions you perform as admin (like uploading, commenting etc.).</li>
+    <li>Choose your password wisely - it mustn't be too short, nor should you choose a trivial password. The coppermine dev team recommends to come up with a sentence that means something for you and use the first letter from the words of the sentence. Ideally, the password should contain upper and lower case characters and numbers. As an example, take a look at the sentence &quot;<tt class="code">Whenever my neighbour's 5 dogs see me I have to run</tt>&quot; - it will become &quot;<tt class="code">Wmn5dsmIh2r</tt>&quot;</li>
+</ul>
+After having populated all fields as required, hit the button at the bottom.
+
+<a name="install_screen_wizard_completed"></a><h3>Installation completed<a href="#install_screen_wizard_completed" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+Once you see that final screen, you have made it - congrats. Click on the button at the bottom or any of the links that will send you to your new gallery's index page or the login screen where you can log in as admin to configure your gallery.<br />
+We recommend to continue reading the documentation section <a href="start.htm">Getting started</a> now. 
 
 <a name="install_screen_end"></a>
 
