@@ -1508,15 +1508,15 @@ $lang_install['select_lang'] = 'Select default language: ';
 $lang_install['sql_file_not_found'] = 'The file \'%s\' could not be found. Check that you have uploaded all Coppermine files to your server';
 $lang_install['status'] = 'Status';
 $lang_install['subdir_called'] = 'A subdirectory called \'%s\' should normally exist in the directory where you uploaded Coppermine. <br />The installer can\'t find this directory. Check that you have uploaded all Coppermine files to your server.';
-$lang_install['title_admin'] = 'Create Coppermine Administrator';
-$lang_install['title_dir_check'] = 'Checking Directory Permissions';
-$lang_install['title_file_check'] = 'Checking Installation Files';
-$lang_install['title_finished'] = 'Installation Completed';
-$lang_install['title_imp'] = 'Image Package Selection';
-$lang_install['title_imp_test'] = 'Testing Image Package';
-$lang_install['title_mysql_db_sel'] = 'MySQL Database Selection';
-$lang_install['title_mysql_pop'] = 'Creating Database Structure';
-$lang_install['title_mysql_user'] = 'MySQL User Authentication';
+$lang_install['title_admin'] = 'Create coppermine administrator';
+$lang_install['title_dir_check'] = 'Checking directory permissions';
+$lang_install['title_file_check'] = 'Checking installation files';
+$lang_install['title_finished'] = 'Installation completed';
+$lang_install['title_imp'] = 'Image package selection';
+$lang_install['title_imp_test'] = 'Testing image library';
+$lang_install['title_mysql_db_sel'] = 'MySQL database selection';
+$lang_install['title_mysql_pop'] = 'Creating database structure';
+$lang_install['title_mysql_user'] = 'MySQL user authentication';
 $lang_install['title_welcome'] = 'Welcome to Coppermine installation';
 $lang_install['tmp_conf_error'] = 'Unable to write the temporary config file - make sure the \'include\' folder is writable for the script.';
 $lang_install['tmp_conf_ser_err'] = 'A serious error occurred in the installer, try reloading your page or start over by removing the \'include/config.tmp\' file.';
